# standard-webhooks

./: .gitignore  CONTRIBUTING.md  README.md  composer.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: csharp-lint.yml  csharp-release.yml  elixir-lint.yml  elixir-release.yml  go-lint.yml  java-lint.yml  java-release.yml  javascript-lint.yml  javascript-release.yml  php-lint.yml  php-release.yml  python-lint.yml  python-release.yml  ruby-lint.yml  ruby-release.yml  rust-lint.yml  rust-release.yml  rust-security.yml
libraries/: LICENSE  README.md  composer.json  deny.toml  go.mod  phpunit.xml
libraries/csharp/: README.md  standardwebhooks.sln
libraries/csharp/StandardWebhooks/: StandardWebhooks.csproj  Utils.cs  Webhook.cs
libraries/csharp/StandardWebhooks.Tests/: StandardWebhooks.Tests.csproj  WebhookTest.cs
libraries/elixir/: .gitignore  .tool-versions  README.md  mix.exs
libraries/elixir/lib/: standard_webhooks.ex
libraries/elixir/test/: standard_webhooks_test.exs
libraries/go/: README.md  example_webhook_test.go  webhook.go  webhook_asymmetric.go  webhook_asymmetric_test.go  webhook_symmetric.go  webhook_symmetric_test.go  webhook_test.go
libraries/java/: README.md  build.gradle  deploy.gradle  gradle.properties  pom.xml
libraries/javascript/: .eslintrc.js  .prettierrc.js  README.md  eslint.config.mjs  package.json  tsconfig.json
libraries/php/: README.md
libraries/python/: .flake8  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
libraries/python/requirements.in/: development.txt
libraries/python/scripts/: format.sh  lint.sh
libraries/python/standardwebhooks/: __init__.py  config.py  exceptions.py  webhooks.py
libraries/python/tests/: fixtures.py  test_webhooks.py
libraries/ruby/: .editorconfig  README.md  standardwebhooks.gemspec
libraries/rust/: Cargo.toml  README.md
libraries/rust/src/: lib.rs
libraries/testdata/: signatures.json
libraries/tools/: bump_version.js  package.json
spec/: standard-webhooks.md
(+31 files in other folders)
