[build-system]
build-backend = "setuptools.build_meta:__legacy__"
requires = ["setuptools >= 40.8.0", "wheel"]

[tool.black]
line-length = 120

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120
skip_gitignore = true
